Fix line break on wind display in index.css and WindData.js

--- a/src/index.css
+++ b/src/index.css
@@ -14,3 +14,7 @@ body {
   font-weight: bold;
   color: #314763;
 }
+
+.wind {
+    white-space: pre-line;
+}
